Closed
Bug 155013
Opened 23 years ago
Closed 22 years ago
Content area doesn't fill dismissed space (gray at bottom of page)
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: bugmail, Assigned: sfraser_bugs)
References
()
Details
(Whiteboard: edt_x3)
Attachments
(2 files)
|
116.55 KB,
image/png
|
Details | |
|
3.77 KB,
patch
|
bryner
:
superreview+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.1a+) Gecko/20020622
BuildID: 2002062203
If an event occurs that would require the content area to expand to fill space
formerly occupied by chrome of some kind, the needed expansion doesn't occur,
and some blank, grey space is left behind.
Reproducible: Always
Steps to Reproduce:
1. Open a Navigator window, pointing to a URL (e.g., [http://www.mozilla.org/])
2. Spawn a new tab
3. Switch back to the first tab, and scroll the content to the very bottom (such
as by pressing the end key)
3. Dismiss the tab, leaving the original tab showing without a tab toolbar
Actual Results: A grey space is displayed at the bottom of the content area,
equal in height to the dismissed tab toolbar.
Expected Results: The content area should have taken over the abandoned space.
Care should be taken to ensure the space isn't just painted in the content's
background color, but that the bottom of the content is actually moved to the
bottom of the content pane.
Whoops, strike those steps. Use these instead.
1. Open a Navigator window, pointing to a URL (e.g., [http://www.mozilla.org/])
2. Spawn a new tab
3. Switch back to the first tab, and scroll the content to the very bottom (such
as by pressing the end key)
4. Switch back to the new tab and dismiss it, leaving the original tab showing
without a tab toolbar
Comment 2•23 years ago
|
||
Confirmed on Mac OS X CFM 2002062903.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 3•23 years ago
|
||
> 4. Switch back to the new tab and dismiss it, leaving the original tab showing
> without a tab toolbar
How are you dismissing it? Using the close button on the far right of the ``tab
bar''? What are your tabbed browsing prefs set to? I can't seem to reproduce
this on my Mac OS X build.
Over to jag for a look since this is tabbed browsing/XUL related.
Assignee: sgehani → jaggernaut
Component: XP Apps → XP Toolkit/Widgets: XUL
I'm dismissing it by clicking the close widget on the tab toolbar. My tabbed
browsing preferences are set to hide the tab tab when only one tab is open.
Samir, have you had any luck reproducing this? If not let me know, and I'll try
to come up with another reproduction regime.
This problem is still evident using FizzillaCFM/2002110808.
Has anyone been able to reproduce this, or is it headed for the big black hole
of old Bugzilla bugs?
Couldn't reproduce using Win32/2002102704 (Classic and Modern). Can still
reproduce using FizzillaMach/2002121607 (Classic and Modern).
Comment 9•22 years ago
|
||
Yes this is easy to reproduce. It only affects themes that use "Aqua"
scrollbars, like Classic.
Switch to the Classic theme, scroll to the bottom of a window, change the text
zoom to 75% - result: gray at the bottom of the page.
Or (still in Classic), compose a new mail message making the text long enough
to cause the message to scroll. When at the very bottom of the message, delete a
few lines. Instead of shifting the content down, you get gray at the bottem.
Same effect in a composer window.
Comment 10•22 years ago
|
||
*** Bug 152081 has been marked as a duplicate of this bug. ***
Comment 11•22 years ago
|
||
It seems like this bug ought to have a dependency relationship to bug 181293,
one way or the other. What's up with that horrible medium gray?
Another easy way to reproduce it is to press the silver jellybean (upper right
corner of title bar) while scrolled to the bottom of a page.
Severity: trivial → normal
Summary: Content area doesn't fill dismissed chrome areas → Content area doesn't fill dismissed space (gray at bottom of page)
| Assignee | ||
Comment 12•22 years ago
|
||
The bug here is in the native scrollbar code, specifically
nsNativeScrollbarFrame::AttributeChanged().
nsSliderFrame::AttributeChanged() (the XUL scrollbar) sets the curpos attribute
on the scrollbar content when the max is set to a value smaller than the current
value. nsNativeScrollbarFrame omits to do this, so we short-circuit some later
code in nsGfxScrollFrameInner::AttributeChanged that scrolls the content back
into the right place.
| Assignee | ||
Comment 13•22 years ago
|
||
This patch copies a chunk of code from nsSliderFrame::AttributeChanged into
nsNativeScrollbarFrame::AttributeChanged. I don't know whether we need the
scroll mediator stuff, but we certainly need the setting of the curpos
attribute.
Comment 14•22 years ago
|
||
Comment on attachment 115097 [details] [diff] [review]
Possible fix in nsNativeScrollbarFrame
r/sr=me
Attachment #115097 -
Flags: superreview+
| Assignee | ||
Comment 16•22 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: pawyskoczka → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•