Fix bug 155013 -- the native scrollbar frame failed to enforce cur <= max, which caused the contents to remain in the wrong position sometimes. r/sr=bryner